--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
 
     <section class="hero">
         <nav class="navbar">
+            
+            <div class="menu-toggle" id="menu-toggle">
+              <i class="fas fa-bars"></i>
+            </div>
 
-            <ul>
+          <ul class="nav-links" id="nav-links">
             <li><a href="#aboutMe">About Me</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#contactMe">Contact Me</a></li>
-            </ul>
+          </ul>
         </nav>
 
         <div class="hero-content" data-aos="fade-right">
